# CompiProyect

./: CMakeLists.txt  exp.cpp  exp.h  imp_codegen.cpp  imp_codegen.hh  imp_interpreter.cpp  imp_interpreter.hh  imp_type.cpp  imp_type.hh  imp_type_checker.cpp  imp_type_checker.hh  imp_value.cpp  imp_value.hh  imp_value_visitor.hh  input0.txt  input1.txt  input3.txt  input4.txt  main.cpp  parser.cpp  scanner.cpp  svm_parser.cpp  token.cpp  token.h  type_visitor.h  visitor.cpp  visitor.h
Pruebas/: input1.txt  input2.txt  input3.c  input3.txt
